Fixed problem where the frame was not being invalidated when the image size is known. This causes problems for tiled images. b=36811, r=kmcklusk@netscape.com